[FEAT] - Introduction to Building Website Layouts in HTML and CSS: HTML5 Sectioning Elements

--- a/location.html
+++ b/location.html
@@ -5,25 +5,28 @@
   <title>The Blue Leopard Pub: Location &amp; Hours</title>
 </head>
 <body>
-Location & Hours
+<h1>Location &amp; Hours</h1>
 
-The Blue Leopard is located near the riverfront at 9 Leopard Avenue, across from Fulcher Bridge. Walking distance from Berry Park and Central Station. Most guests prefer to get off on Central Station on the Green Line and walk two blocks west until they reach Leopard Avenue.
-Limited parking is available around back.
-Hours
-Monday 10am – 2am
-Tuesday 10am – 2am
-Wednesday 10am – 2am
-Thursday 10am – 2am
-Friday 10am – 4am
-Saturday 10am – 4am
-Sunday 10am – 4am
-Special Notice
-We will be closed 10.24 - 10.30 for renovations.
+<p>The Blue Leopard is located near the riverfront at 9 Leopard Avenue, across from Fulcher Bridge. Walking distance from Berry Park and Central Station. Most guests prefer to get off on Central Station on the Green Line and walk two blocks west until they reach Leopard Avenue. Limited parking is available around back.</p>
 
-CONTACT US
+<h3>Hours</h3>
+<ul>
+<li>Monday 10am&mdash;2am</li>
+<li>Tuesday 10am&mdash;2am</li>
+<li>Wednesday 10am&mdash;2am</li>
+<li>Thursday 10am&mdash;2am</li>
+<li>Friday 10am&mdash;4am</li>
+<li>Saturday 10am&mdash;4am</li>
+<li>Sunday 10am&mdash;4am</li>
+</ul>
 
-1.555.678.9876
-contact@theblueleopa.rd
+<h3>Special Notice</h3>
+<p>We will be closed 10.24&mdash;10.30 for renovations.</p>
+
+<h4>CONTACT US</h4>
+
+<p>1.555.678.9876</p>
+<p>contact@theblueleopa.rd</p>
 
 </body>
 </html>
