--- a/menu.html
+++ b/menu.html
@@ -5,39 +5,46 @@
   <title>The Blue Leopard: Menu</title>
 </head>
 <body>
-<h1>Menu</h1>
-<h2>Fall 2015</h2>
-<p>Our menu is prepared daily from fresh, local flavors. Our menu is seasonal, meaning it changes according to availability of ingredients. This means we never pay for out of season items, and the good flavor and savings that result can be passed on directly to you. Below you can see a sampling of some of our customer’s favorite dishes. Specials vary daily and are posted out front, or you may call to find out ahead of time at 1.555.678.9876.</p>
- 
-         
-<h3>Starters</h3>
 
-<ul>
-<li>Pub pretzels</li>
-<li>Gourmet Nachos</li>
-<li>Boneless Wings</li>
-<li>Cheese and Fruit Tray</li>
-</ul>
+  <div>
+    <h1>Menu</h1>
+    <h2>Fall 2015</h2>
+    <p>Our menu is prepared daily from fresh, local flavors. Our menu is seasonal, meaning it changes according to availability of ingredients. This means we never pay for out of season items, and the good flavor and savings that result can be passed on directly to you. Below you can see a sampling of some of our customer’s favorite dishes. Specials vary daily and are posted out front, or you may call to find out ahead of time at 1.555.678.9876.</p>
+  </div>
 
-<h3>Entrees</h3>
-<ul>
-<li>Shepherd's Pie</li>
-<li>Bangers and Mash</li>
-<li>Filet and Vegetable of the Day</li>
-<li>Fish and Chips</li>
-</ul>
+  <div>        
+    <h3>Starters</h3>
 
-<h3>For the Table</h3>
-<ul>
-<li>Bread of the Day</li>
-<li>Whole Roasted Chicken</li>
-<li>Rack of Lamb</li>
-<li>Pot O' Stew</li>
-</ul>
+    <ul>
+      <li>Pub pretzels</li>
+      <li>Gourmet Nachos</li>
+      <li>Boneless Wings</li>
+      <li>Cheese and Fruit Tray</li>
+    </ul>
+  </div> 
+  <div>
+    <h3>Entrees</h3>
+    <ul>
+      <li>Shepherd's Pie</li>
+      <li>Bangers and Mash</li>
+      <li>Filet and Vegetable of the Day</li>
+      <li>Fish and Chips</li>
+    </ul>
+  </div>
+  <div>
+    <h3>For the Table</h3>
+    <ul>
+      <li>Bread of the Day</li>
+      <li>Whole Roasted Chicken</li>
+      <li>Rack of Lamb</li>
+      <li>Pot O' Stew</li>
+    </ul>
+  </div>
+  <footer>
+    <h4>CONTACT US</h4>
 
-<h4>CONTACT US</h4>
-
-<p>1.555.678.9876</p>
-<p>contact@theblueleopa.rd</p>
+    <p>1.555.678.9876</p>
+    <p>contact@theblueleopa.rd</p>
+  </footer>
 </body>
 </html>
