[FEAT] - Introduction to Building Website Layouts in HTML and CSS: Building Navigation

--- a/location.html
+++ b/location.html
@@ -5,6 +5,13 @@
   <title>The Blue Leopard Pub: Location &amp; Hours</title>
 </head>
 <body>
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="menu.html">Menu</a></li>
+      <li><a href="location.html">Location &amp; Hours</a></li>
+    </ul>
+  </nav>
   <div>
     <h1>Location &amp; Hours</h1>
 
