--- a/menu.html
+++ b/menu.html
@@ -5,7 +5,13 @@
   <title>The Blue Leopard: Menu</title>
 </head>
 <body>
-
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="menu.html">Menu</a></li>
+      <li><a href="location.html">Location &amp; Hours</a></li>
+    </ul>
+  </nav>
   <div>
     <h1>Menu</h1>
     <h2>Fall 2015</h2>
