--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
   <title>The Blue Leopard Pub: Home</title>
 </head>
 <body>
-
+  
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="menu.html">Menu</a></li>
+      <li><a href="location.html">Location &amp; Hours</a></li>
+    </ul>
+  </nav>
   <div>
     <h1>The Blue Leopard</h1>
     <h2>A Classic Pub with a Modern Approach</h2>
