--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
   <title>The Blue Leopard Pub: Home</title>
 </head>
 <body>
-  
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="menu.html">Menu</a></li>
-      <li><a href="location.html">Location &amp; Hours</a></li>
-    </ul>
-  </nav>
+  <header>
+    <a href="index.html"><img src="images/logo.png" alt="Blue Leopard logo"></a>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="menu.html">Menu</a></li>
+        <li><a href="location.html">Location &amp; Hours</a></li>
+      </ul>
+    </nav>
+    </header>
   <div>
     <h1>The Blue Leopard</h1>
     <h2>A Classic Pub with a Modern Approach</h2>
