--- a/menu.html
+++ b/menu.html
@@ -17,7 +17,12 @@
     <h2>Fall 2015</h2>
     <p>Our menu is prepared daily from fresh, local flavors. Our menu is seasonal, meaning it changes according to availability of ingredients. This means we never pay for out of season items, and the good flavor and savings that result can be passed on directly to you. Below you can see a sampling of some of our customer’s favorite dishes. Specials vary daily and are posted out front, or you may call to find out ahead of time at 1.555.678.9876.</p>
   </div>
-
+  <div>
+    <img src="images/dinner-special.jpg" alt="Dinner Special">
+    <img src="images/filet-dinner.jpg" alt="Filet Salad">
+    <img src="images/salad.jpg" alt="Summer Salad">
+    <img src="images/scallops.jpg" alt="Scallop Dinner">
+  </div>
   <div>        
     <h3>Starters</h3>
 
