--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>The Blue Leopard Pub: Home</title>
+  <link href="https://fonts.googleapis.com/css?family=Alegreya+SC|Alegreya:400italic,400,700" rel="stylesheet" type="text/css">
 </head>
 <body>
   <header>
@@ -14,7 +15,7 @@
         <li><a href="location.html">Location &amp; Hours</a></li>
       </ul>
     </nav>
-    </header>
+  </header>
   <div>
     <h1>The Blue Leopard</h1>
     <h2>A Classic Pub with a Modern Approach</h2>
