--- a/menu.html
+++ b/menu.html
@@ -3,15 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <title>The Blue Leopard: Menu</title>
+  <link href="https://fonts.googleapis.com/css?family=Alegreya+SC|Alegreya:400italic,400,700" rel="stylesheet" type="text/css">
 </head>
 <body>
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="menu.html">Menu</a></li>
-      <li><a href="location.html">Location &amp; Hours</a></li>
-    </ul>
-  </nav>
+  <header>
+    <a href="index.html"><img src="images/logo.png" alt="Blue Leopard logo"></a>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="menu.html">Menu</a></li>
+        <li><a href="location.html">Location &amp; Hours</a></li>
+      </ul>
+    </nav>
+  </header>
   <div>
     <h1>Menu</h1>
     <h2>Fall 2015</h2>
