--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-  <div>  
+  <div class="container">  
     <header>
       <a href="index.html"><img src="images/logo.png" alt="Blue Leopard logo"></a>
       <nav>
