--- a/location.html
+++ b/location.html
@@ -8,46 +8,48 @@
   <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-  <header>
-    <a href="index.html"><img src="images/logo.png" alt="Blue Leopard logo"></a>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="menu.html">Menu</a></li>
-        <li><a href="location.html">Location &amp; Hours</a></li>
-      </ul>
-    </nav>
-  </header>
-  <div>
-    <h1>Location &amp; Hours</h1>
+  <div class="container">
+    <header>
+      <a href="index.html"><img src="images/logo.png" alt="Blue Leopard logo"></a>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="menu.html">Menu</a></li>
+          <li><a href="location.html">Location &amp; Hours</a></li>
+        </ul>
+      </nav>
+    </header>
+    <div>
+      <h1>Location &amp; Hours</h1>
 
-    <p>The Blue Leopard is located near the riverfront at 9 Leopard Avenue, across from Fulcher Bridge. Walking distance from Berry Park and Central Station. Most guests prefer to get off on Central Station on the Green Line and walk two blocks west until they reach Leopard Avenue. Limited parking is available around back.</p>
+      <p>The Blue Leopard is located near the riverfront at 9 Leopard Avenue, across from Fulcher Bridge. Walking distance from Berry Park and Central Station. Most guests prefer to get off on Central Station on the Green Line and walk two blocks west until they reach Leopard Avenue. Limited parking is available around back.</p>
+    </div>
+
+    <aside>
+      <div>
+        <h3>Hours</h3>
+        <ul>
+          <li>Monday 10am&mdash;2am</li>
+          <li>Tuesday 10am&mdash;2am</li>
+          <li>Wednesday 10am&mdash;2am</li>
+          <li>Thursday 10am&mdash;2am</li>
+          <li>Friday 10am&mdash;4am</li>
+          <li>Saturday 10am&mdash;4am</li>
+          <li>Sunday 10am&mdash;4am</li>
+        </ul>
+      </div>
+      <div>
+        <h3>Special Notice</h3>
+        <p>We will be closed 10.24&mdash;10.30 for renovations.</p>
+      </div>
+    </aside>
+
+    <footer>
+      <h4>CONTACT US</h4>
+
+      <p>1.555.678.9876</p>
+      <p>contact@theblueleopa.rd</p>
+    </footer>
   </div>
-
-  <aside>
-    <div>
-      <h3>Hours</h3>
-      <ul>
-        <li>Monday 10am&mdash;2am</li>
-        <li>Tuesday 10am&mdash;2am</li>
-        <li>Wednesday 10am&mdash;2am</li>
-        <li>Thursday 10am&mdash;2am</li>
-        <li>Friday 10am&mdash;4am</li>
-        <li>Saturday 10am&mdash;4am</li>
-        <li>Sunday 10am&mdash;4am</li>
-      </ul>
-    </div>
-    <div>
-      <h3>Special Notice</h3>
-      <p>We will be closed 10.24&mdash;10.30 for renovations.</p>
-    </div>
-  </aside>
-  
-  <footer>
-    <h4>CONTACT US</h4>
-
-    <p>1.555.678.9876</p>
-    <p>contact@theblueleopa.rd</p>
-  </footer>
 </body>
 </html>
