--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container">  
     <header>
-      <a href="index.html"><img src="images/logo.png" alt="Blue Leopard logo"></a>
+      <a href="index.html" class="logo"><img src="images/logo.png" alt="Blue Leopard logo"></a>
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
