--- a/menu.html
+++ b/menu.html
@@ -11,7 +11,7 @@
   <div class="container">
     <header>
       <a href="index.html" class="logo"><img src="images/logo.png" alt="Blue Leopard logo"></a>
-      <nav>
+      <nav class="main-navigation">
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="menu.html">Menu</a></li>
