--- a/menu.html
+++ b/menu.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles/normalize.css">
   <link rel="stylesheet" href="styles/main.css">
 </head>
-<body>
+<body class="menu-page">
   <div class="container">
     <header>
       <a href="index.html" class="logo"><img src="images/logo.png" alt="Blue Leopard logo"></a>
@@ -24,13 +24,13 @@
       <h2>Fall 2015</h2>
       <p>Our menu is prepared daily from fresh, local flavors. Our menu is seasonal, meaning it changes according to availability of ingredients. This means we never pay for out of season items, and the good flavor and savings that result can be passed on directly to you. Below you can see a sampling of some of our customer’s favorite dishes. Specials vary daily and are posted out front, or you may call to find out ahead of time at 1.555.678.9876.</p>
     </div>
-    <div>
+    <div class="gallery">
       <img src="images/dinner-special.jpg" alt="Dinner Special">
       <img src="images/filet-dinner.jpg" alt="Filet Salad">
       <img src="images/salad.jpg" alt="Summer Salad">
       <img src="images/scallops.jpg" alt="Scallop Dinner">
     </div>
-    <div>        
+    <div class="featured-info">        
       <h3>Starters</h3>
 
       <ul>
@@ -40,7 +40,7 @@
         <li>Cheese and Fruit Tray</li>
       </ul>
     </div> 
-    <div>
+    <div class="featured-info">
       <h3>Entrees</h3>
       <ul>
         <li>Shepherd's Pie</li>
@@ -49,7 +49,7 @@
         <li>Fish and Chips</li>
       </ul>
     </div>
-    <div>
+    <div class="featured-info">
       <h3>For the Table</h3>
       <ul>
         <li>Bread of the Day</li>
