--- a/location.html
+++ b/location.html
@@ -26,7 +26,7 @@
     </div>
 
     <aside>
-      <div>
+      <div class="featured-info">
         <h3>Hours</h3>
         <ul>
           <li>Monday 10am&mdash;2am</li>
@@ -38,7 +38,7 @@
           <li>Sunday 10am&mdash;4am</li>
         </ul>
       </div>
-      <div>
+      <div class="featured-info">
         <h3>Special Notice</h3>
         <p>We will be closed 10.24&mdash;10.30 for renovations.</p>
       </div>
