[FEAT] - Introduction to Building Website Layouts in HTML and CSS: Styling Landing Text and Responsive Type

--- a/location.html
+++ b/location.html
@@ -19,7 +19,7 @@
         </ul>
       </nav>
     </header>
-    <div>
+    <div class="landing">
       <h1>Location &amp; Hours</h1>
 
       <p>The Blue Leopard is located near the riverfront at 9 Leopard Avenue, across from Fulcher Bridge. Walking distance from Berry Park and Central Station. Most guests prefer to get off on Central Station on the Green Line and walk two blocks west until they reach Leopard Avenue. Limited parking is available around back.</p>
